<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="25dp"
                app:srcCompat="@drawable/logo_prueba"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:fontFamily="sans-serif"
                android:text="@string/bienvenido"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="#4A4949"
                android:layout_marginTop="5dp"
                android:text="@string/logc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/email"
                android:textColor="#000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#474948"
                android:textColor="#000000"
                android:layout_marginEnd="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="#000000"
                android:password="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="#474948"
                android:layout_marginEnd="25dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="#FFFFFF"
                android:background="#009688"
                android:textAllCaps="false"
                android:text="@string/login"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="#595757"
                    android:text="@string/reg2"/>

                <TextView
                    android:id="@+id/tv_regl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="#009688"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>